# vityaz

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  TODO.md
include/: graph.h  lex.h  os.h  parse.h  vityaz.h
src/: graph.c  lex.c  main.c  os-posix.c  os-win.c  parse.c  util.c
